--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <canvas id="game-canvas"></canvas>
-    </div>
     <div id="info">
         <p>Generation: <span id="generation">0</span></p>
+        <p>Live Snakes: <span id="live-snakes">0</span></p>
+    </div>
+    <div id="game-container">
+        <canvas id="game-canvas"></canvas>
     </div>
     <script src="script.js" type="module"></script>
 </body>
