--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id="game-container">
         <canvas id="game-canvas"></canvas>
     </div>
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
